renderer/src/screens/single-request-details/components/RequestInfoTable.css
.RequestInfoTable {
  padding: 32px 0px 0px 0px;
}

table {
  width: 100%;
  border-collapse: collapse;
}

td, th {
  text-align: left;
  border-bottom: 1pt solid #4C4C4C;
  padding: 8px;
}

td {
  width: min-content;
  display: inline-block;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

